--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
+brandbullsmart-7d7b2-firebase-adminsdk-fbsvc-7c8b120749.json
+google-services.json
 # dependencies
 node_modules/
 
