--- a/ios/BrandbullSMART/Info.plist
+++ b/ios/BrandbullSMART/Info.plist
@@ -51,6 +51,12 @@
       <key>NSAllowsLocalNetworking</key>
       <true/>
     </dict>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+    <string>This app needs Bluetooth access to connect and configure smart home devices</string>
+    <key>NSBluetoothPeripheralUsageDescription</key>
+    <string>This app needs Bluetooth access to discover and connect to smart home devices</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs location access to read WiFi network information for device configuration</string>
     <key>NSUserActivityTypes</key>
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
