--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -48,6 +48,7 @@ python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 realtime==2.7.0
+redis==6.4.0
 requests==2.32.4
 rich==14.1.0
 rich-toolkit==0.15.0
